src/components/status.css
/* ... */
.status-followed-tags {
  background: linear-gradient(
    160deg,
    var(--hashtag-faded-color),
    transparent min(160px, 50%)
  );
}
.status-reply-to {
  background: linear-gradient(
    160deg,
    var(--reply-to-faded-color),
    transparent min(160px, 50%)
  );
}
:is(.status-reblog, .status-group, .status-followed-tags) .status-reply-to {
  background: linear-gradient(
    -20deg,
    var(--reply-to-faded-color),
    transparent min(160px, 50%)
  );
}
.visibility-direct {
  --yellow-stripes: repeating-linear-gradient(
    -45deg,
    var(--reply-to-faded-color),
    var(--reply-to-faded-color) 10px,
    var(--reply-to-faded-color) 10px,
    transparent 10px,
    transparent 20px
  );
  /* diagonal stripes of yellow */
  background-image: var(--yellow-stripes);
}

/* STATUS PRE META */

.status-pre-meta {
  padding: 8px 16px 0;
  opacity: 0.75;
  font-size: smaller;
  vertical-align: middle;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  margin-bottom: -8px;
}
.status-reblog .status-pre-meta .icon {
  color: var(--reblog-color);
  margin-right: 4px;
  vertical-align: text-bottom;
}
.status-group .status-pre-meta .icon {
  color: var(--group-color);
  margin-right: 4px;
  vertical-align: text-bottom;
}
.status-followed-tags {
  .status-pre-meta {
    position: relative;
    z-index: 1;
    display: flex;
    flex-wrap: wrap;
    gap: 4px;
    align-items: center;

    .icon {
      color: var(--hashtag-color);
      margin-right: 4px;
      vertical-align: text-bottom;
    }
    a {
      color: var(--hashtag-text-color);
      font-weight: bold;
      font-size: 12px;
      text-decoration-color: var(--hashtag-faded-color);
      text-underline-offset: 2px;
      text-decoration-thickness: 2px;
      display: inline-block;
      padding: 2px;
      vertical-align: top;
      text-transform: uppercase;
      text-shadow: 0 1px var(--bg-color);

      &:hover {
        color: var(--text-color);
        text-decoration-color: var(--hashtag-color);
      }
    }
  }

  .status-followed-tag-item {
    color: var(--hashtag-text-color);
    padding: 2px;
    font-weight: bold;
    font-size: 12px;
    text-transform: uppercase;
    margin-inline-end: 0.5em;
  }
}

/* STATUS */

.status {
  display: flex;
  padding: 16px;
  line-height: 1.4;
  align-items: flex-start;
  position: relative;
  font-size: var(--text-size);
}
.status.large {
  --fade-in-out-bg: linear-gradient(
    to bottom,
    transparent,
    var(--bg-color) 70px,
    var(--bg-color) calc(100% - 50px),
    transparent
  );
  padding-bottom: 8px;
  background-image: var(--fade-in-out-bg);
}
.status.large.visibility-direct {
  background-image: var(--fade-in-out-bg), var(--yellow-stripes);
}

.status-card-link {
  text-decoration: none;
  color: var(--text-color);
}
.status-card-link:not(
    .truncated .status-card-link, /* parent status already truncated */
    .status-card-link .status-card-link /* nested status cards */
  ):has(.truncated) {
  display: block;
  position: relative;

  &:after {
    content: attr(data-read-more);
    line-height: 1;
    display: inline-block;
    position: absolute;
    --inset-offset: 16px;
    inset-block-end: var(--inset-offset);
    inset-inline-end: var(--inset-offset);
    color: var(--text-color);
    background-color: var(--bg-faded-color);
    border: 1px dashed var(--link-color);
    box-shadow: 0 0 0 1px var(--bg-color), 0 -5px 10px var(--bg-color),
      0 -5px 15px var(--bg-color), 0 -5px 20px var(--bg-color);
    padding: 0.5em 0.75em;
    border-radius: 10em;
    font-size: 90%;
    white-space: nowrap;
    transition: transform 0.2s ease-out;
  }

  &:is(:hover, :focus):after {
    color: var(--link-color);
    transform: translate(2px, 0);
  }
}
.status-card-link:is(:hover, :focus) .status-card {
  border-color: var(--outline-hover-color);
  box-shadow: inset 0 0 0 4px var(--bg-faded-blur-color);
}
.status-card-link:is(:hover, :focus) .status-card img {
  animation: position-object 5s ease-in-out 1s 5;
  animation-duration: var(--anim-duration, 5s);
}
.status-card-link:is(:active) .status-card {
  background-color: var(--bg-faded-color);
}
.status-card {
  font-size: calc(var(--text-size) * 0.9);
  margin: 1em 0 0;
  border-radius: 16px;
  padding: 12px;
  border: 1px solid var(--outline-color);
  background-color: var(--bg-color);
  box-shadow: inset 0 0 4px var(--outline-color);
  /* box-shadow: inset 0 0 0 2px var(--bg-faded-color); */
  /* filter: drop-shadow(0 2px 4px var(--bg-faded-color)); */
}
.status-card:has(.status-badge:not(:empty)) {
  border-top-right-radius: 8px;
}
.status-card > * {
  pointer-events: none;
}
.status-card:not(.status-carousel .status)
  :is(.content, .poll, .media-container) {
  max-height: 160px !important;
  overflow: clip;
}
.status.small:not(.status-carousel .status, .status.large .status)
  .status-card
  :is(.content, .poll, .media-container:not(.media-gt2)) {
  max-height: 80px !important;
}
.status.large .status-card :is(.content, .poll, .media-container) {
  max-height: 80vh !important;
}
.status-card :is(.content, .poll, .media-container) {
  font-size: inherit !important;
}
.status-card :is(.content.truncated, .poll, .media-container.truncated) {
  /* font-size: inherit !important; */
  mask-image: linear-gradient(to bottom, #000 80px, transparent);
}
.status.small
  .status-card
  :is(.content.truncated, .poll, .media-container.truncated) {
  mask-image: linear-gradient(to bottom, #000 40px, transparent);
}
.status-card .card {
  display: none;
}
.timeline-deck .status-card .content.truncated:after {
  /* Don't show "Read more" in status cards */
  content: none !important;
}

@keyframes skeleton-breathe {
  0% {
    opacity: 1;
  }
  40% {
    opacity: 0.4;
  }
  100% {
    opacity: 1;
  }
}
.status.skeleton {
  color: var(--outline-color);
  animation: skeleton-breathe 6s linear infinite;
  user-select: none;
  pointer-events: none;
  contain: layout;
  text-rendering: optimizeSpeed;
}
/* ... */

